k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-app-demo
  labels:
    name: k8s-app-demo
