k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapi-service
  namespace: k8s-app-demo
  labels:
    app: myapi
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30081
    protocol: TCP
    name: http
  selector:
    app: myapi

---
apiVersion: v1
kind: Service
metadata:
  name: myapi-service-internal
  namespace: k8s-app-demo
  labels:
    app: myapi
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: myapi
