k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapi-ingress
  namespace: default
  labels:
    app: myapi
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: myapi.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myapi-service-internal
            port:
              number: 80
